Created Pelican setup